--- a/css/main.css
+++ b/css/main.css
@@ -87,15 +87,118 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+/**** Body *****/
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  background-color: #F2F2F2;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+
+}
+
+/**** Header *****/
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row nowrap;
+  width: 100%;
+  margin: 1em 1em;
+}
+
+.header-button {
+  color: #ffffff;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 500;
+  font-size: 1em;
+  background-color: #13183F;
+  border-radius: 2em;
+  padding: 1em;
+}
+
+
+/***** Main *****/
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  width: 100%;
+}
+
+
+/***** Hero *****/
+.hero-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  width: 100%;
+}
+
+.content-wrapper {
+  width: 100%;
+  margin: 1em;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+h1 {
+  color: #13183F;
+  font-weight: 800;
+  font-size: 2.5rem;
+}
+
+.hero-area p {
+  color: #83869A;
+  width: 100%;
+}
+
+.hero-button {
+  border-radius: 2em;
+  padding: 1em;
+  font-weight: 800;
+}
+
+/***** Courses *****/
+.courses {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/***** Footer *****/
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
+  background-color: #13183F;
+  color: #ffffff;
+  width: 100%;
+  padding: 1.5em;
+}
 
 
 /* ==========================================================================
    Media Queries
    ========================================================================== */
 
-   @media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-  }
+   /* @media only screen and (min-width: 35em) {
+    Style adjustments for viewports that meet the condition
+  } */
   
   @media print,
     (-webkit-min-device-pixel-ratio: 1.25),
