Sorted alignment in header

--- a/css/main.css
+++ b/css/main.css
@@ -95,10 +95,10 @@ textarea {
 
 /**** Body *****/
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* flex-flow: row wrap; */
   background-color: #F2F2F2;
   font-family: 'Plus Jakarta Sans', sans-serif;
 
@@ -107,11 +107,12 @@ body {
 /**** Header *****/
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  flex-flow: row nowrap;
-  width: 100%;
-  margin: 1em 1em;
+  /* flex-flow: row nowrap; */
+  /* width: 100%; */
+  /* margin: 1em 1em; */
+  padding: 1.5rem;
 }
 
 .header-button {
@@ -122,6 +123,11 @@ header {
   background-color: #13183F;
   border-radius: 2em;
   padding: 1em;
+}
+
+.header-logo {
+  /* height: 30px; */
+  padding: 3em;
 }
 
 
