--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ main {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  width: 100%;
+  width: 90%;
 }
 
 .content-wrapper {
@@ -292,21 +292,49 @@ footer {
     Style adjustments for viewports that meet the condition
   } */
 
-@media only screen and (min-width: 48em) {
+/* ----------- Tablets larger than 768px wide ----------- */
+@media only screen and (min-width: 768px) {
+  header {
+    justify-content: space-between;
+    width: 90%;
+  }
+
+  .header-logo {
+    margin-left: 2rem;
+  }
+
+  .header-button {
+    width: 25%;
+  }
+
   .hero-area {
     display: flex;
-    justify-content: space-evenly;
-    flex-flow: row nowrap;
+    /* flex-grow: 1; */
+    /* justify-content: space-evenly; */
+    align-items: center;
+    /* flex-flow: row nowrap; */
+    width: 90%;
   }
 
   .content-wrapper {
+    margin: 0;
     width: 50%;
+  }
+
+  .contain-hero-image {
+    position: relative;
+    right: 0;
+    width: 50%;
+    object-fit: contain;
+    /* transform: translateX(55%); */
+    /* overflow: hidden; */
   }
 
   .hero-image {
-    width: 50%;
+    display: block;
+    width: 100%;
+    object-fit: contain;
   }
-
 
   .courses {
     display: flex;
@@ -323,6 +351,9 @@ footer {
     margin: 2.5rem 0;
   }
 }
+
+/* ----------- Desktop Screenlarger than 1200px wide ----------- */
+@media only screen and (min-width: 1200px) {}
 
 @media print,
 (-webkit-min-device-pixel-ratio: 1.25),
