--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,7 @@ footer {
     display: flex;
     /* flex-grow: 1; */
     /* justify-content: space-evenly; */
-    align-items: center;
+    /* align-items: center; */
     /* flex-flow: row nowrap; */
     width: 90%;
   }
@@ -322,17 +322,24 @@ footer {
   }
 
   .contain-hero-image {
-    position: relative;
-    right: 0;
     width: 50%;
-    object-fit: contain;
+    /* position: relative; */
+    /* top: -20%; */
+    /* right: 0%; */
+    /*right: -5%;
+    top: -40%;*/
+    /* object-fit: contain; */
     /* transform: translateX(55%); */
-    /* overflow: hidden; */
+    overflow: hidden;
   }
 
   .hero-image {
     display: block;
     width: 100%;
+    position: relative;
+    right: -5%;
+    top: -5%;
+    /* bottom: 20%; */
     object-fit: contain;
   }
 
@@ -353,7 +360,39 @@ footer {
 }
 
 /* ----------- Desktop Screenlarger than 1200px wide ----------- */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+
+  body {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+
+  header {
+    width: 80%;
+  }
+
+
+  .courses-heading-background {
+    width: 30%;
+    padding: 0;
+  }
+
+  .course-card {
+    width: 30%;
+  }
+
+  footer {
+    justify-content: center;
+  }
+
+  .contain-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+  }
+}
 
 @media print,
 (-webkit-min-device-pixel-ratio: 1.25),
