--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ main {
   flex-flow: row wrap;
   padding-bottom: 2rem;
   width: 100%;
+  overflow: hidden;
 }
 
 
@@ -209,8 +210,9 @@ h1 {
 
 .card-content {
   display: flex;
-  align-items: center;
-  flex-flow: row wrap;
+  align-items: stretch;
+  /* justify-content: left; */
+  flex-direction: column;
 }
 
 .course-card p,
@@ -222,6 +224,7 @@ a {
   color: #F74780;
   text-decoration: none;
   font-size: 1.25rem;
+  margin-top: auto;
 }
 
 .course-card a:hover {
@@ -231,6 +234,7 @@ a {
 .course-card p {
   color: #83869A;
   line-height: 1.6rem;
+  min-height: 9.4rem;
 }
 
 .animation::before {
@@ -337,6 +341,7 @@ footer {
     /* align-items: center; */
     /* flex-flow: row nowrap; */
     width: 90%;
+    margin-bottom: 14rem;
   }
 
   .content-wrapper {
@@ -346,23 +351,24 @@ footer {
 
   .contain-hero-image {
     width: 50%;
-    /* position: relative; */
-    /* top: -20%; */
-    /* right: 0%; */
+    position: relative;
+    top: 5%;
+    right: 0%;
+    /* background-color: #F02AA6; */
+    /* min-height: 25rem; */
     /*right: -5%;
     top: -40%;*/
     /* object-fit: contain; */
     /* transform: translateX(55%); */
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
   .hero-image {
     display: block;
     width: 100%;
-    position: relative;
-    right: -5%;
-    top: -5%;
-    /* bottom: 20%; */
+    position: absolute;
+    right: 0%;
+    top: -45%;
     object-fit: contain;
   }
 
@@ -383,7 +389,7 @@ footer {
 
   .courses-heading {
     font-size: 2rem;
-    margin: 2rem 1rem;
+    margin: 2.5rem 2rem 1rem;
   }
 }
 
@@ -398,6 +404,10 @@ footer {
 
   header {
     width: 80%;
+  }
+
+  .header-button {
+    width: 15%;
   }
 
   .courses {
